# EtherFlow

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  package.json
contract/: foundry.toml
contract/broadcast/Flow.s.sol/1/: run-1725366915.json  run-1725367128.json  run-1725367525.json  run-latest.json
contract/deploy/: Flow.s.sol
contract/src/: Flow.sol
contract/src/abstract/: Collector.sol  Distribute.sol
contract/src/interfaces/: IFlow.sol
contract/test/: Flow.t.sol
src/: errors.rs  lib.rs  main.rs
src/simulation/: collector.rs  distributor.rs  mod.rs  types.rs
src/simulation/helpers/: mod.rs
src/utils/: config.rs  logger.rs
test/: collect.js  disperse.js
